--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -1,6 +1,13 @@
-<section>
+<!-- <section>
     <p>home works!</p>
     <div class="w-64"><app-comment></app-comment></div>
     
 </section>
+ -->
+<section class="max-w-md mx-auto flex flex-col gap-4 mb-4">
+  <app-comment-form (formSubmitted)="createComment($event)"></app-comment-form>
+</section>
 
+<section class="max-w-md mx-auto flex flex-col gap-4">
+  <app-comment [comment]="comment" *ngFor="let comment of comments(); trackBy: commentTrackBy"></app-comment>
+</section>
