--- a/src/app/app.html
+++ b/src/app/app.html
@@ -10,6 +10,9 @@
         <li routerLinkActive="underline underline-offset-4" class="hover:underline hover:underline-offset-4">
           <a routerLink="/about">Link</a>
         </li>
+        <li routerLinkActive="underline underline-offset-4" class="hover:underline hover:underline-offset-4">
+          <a routerLink="/actor">Actor</a>
+        </li>
       </ul>
     </nav>
   </header>
