--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,18 +1,29 @@
 <!-- <router-outlet><router-outlet /> -->
 <div class="min-h-screen flex flex-col">
-  <header class="h-12 px-3 bg-black text-white flex items-center justify-between">
+  <header
+    class="h-12 px-3 bg-black text-white flex items-center justify-between"
+  >
     <span>Website</span>
     <nav>
       <ul class="flex gap-4">
-        <li routerLinkActive="underline underline-offset-4" class="hover:underline hover:underline-offset-4">
+        <li
+          routerLinkActive="underline underline-offset-4"
+          class="hover:underline hover:underline-offset-4"
+        >
           <a routerLink="/home">Home</a>
         </li>
-        <li routerLinkActive="underline underline-offset-4" class="hover:underline hover:underline-offset-4">
+        <li
+          routerLinkActive="underline underline-offset-4"
+          class="hover:underline hover:underline-offset-4"
+        >
           <a routerLink="/about">Link</a>
         </li>
-        <li routerLinkActive="underline underline-offset-4" class="hover:underline hover:underline-offset-4">
+        <!-- <li
+          routerLinkActive="underline underline-offset-4"
+          class="hover:underline hover:underline-offset-4"
+        >
           <a routerLink="/actor">Actor</a>
-        </li>
+        </li> -->
       </ul>
     </nav>
   </header>
