--- a/src/app/components/comment-form/comment-form.html
+++ b/src/app/components/comment-form/comment-form.html
@@ -1,12 +1,15 @@
-<form class="flex flex-col items-end gap-4" (submit)="formSubmit($event)">
+<form class="flex flex-col items-end gap-4" (click)="formFunction($event)">
+  <!-- <form class="flex flex-col items-end gap-4" (submit)="formSubmit($event)"> -->
   <textarea
     name="commentText"
     [placeholder]="placeholder"
-    rows="3" class="px-3 py-1.5 w-full border border-slate-900 rounded-md" ></textarea>
+    rows="3"
+    class="px-3 py-1.5 w-full border border-slate-900 rounded-md"
+  ></textarea>
   <button
     type="submit"
     class="inline-block rounded border border-current px-4 py-1 text-sm font-medium hover:border-white"
   >
-    {{buttonText}}
+    {{ buttonText }}
   </button>
 </form>
