--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -5,9 +5,20 @@
 </section>
  -->
 <section class="max-w-md mx-auto flex flex-col gap-4 mb-4">
-  <app-comment-form (formSubmitted)="createComment($event)"></app-comment-form>
+  <app-comment-form
+    [(count)]="initialCount"
+    (formSubmitted)="createComment($event)"
+  ></app-comment-form>
+  {{ initialCount }}
 </section>
 
+<!-- <section class="max-w-md mx-auto flex flex-col gap-4 mb-4">
+  <app-comment-form (formSubmitted)="createComment($event)"></app-comment-form>
+</section> -->
+
 <section class="max-w-md mx-auto flex flex-col gap-4">
-  <app-comment [comment]="comment" *ngFor="let comment of comments(); trackBy: commentTrackBy"></app-comment>
+  <app-comment
+    [comment]="comment"
+    *ngFor="let comment of comments(); trackBy: commentTrackBy"
+  ></app-comment>
 </section>
