continuing with signal input experiments

--- a/src/app/components/comment-form/comment-form.html
+++ b/src/app/components/comment-form/comment-form.html
@@ -1,5 +1,4 @@
-<form class="flex flex-col items-end gap-4" (click)="formFunction($event)">
-  <!-- <form class="flex flex-col items-end gap-4" (submit)="formSubmit($event)"> -->
+<form class="flex flex-col items-end gap-4" (submit)="formSubmit($event)">
   <textarea
     name="commentText"
     [placeholder]="placeholder"
