--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -9,7 +9,7 @@
     [(count)]="initialCount"
     (formSubmitted)="createComment($event)"
   ></app-comment-form>
-  {{ initialCount }}
+  <!-- {{ initialCount }} -->
 </section>
 
 <!-- <section class="max-w-md mx-auto flex flex-col gap-4 mb-4">
