object id references'

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -16,7 +16,7 @@
           routerLinkActive="underline underline-offset-4"
           class="hover:underline hover:underline-offset-4"
         >
-          <a routerLink="/about">Link</a>
+          <a routerLink="/about">Login</a>
         </li>
         <!-- <li
           routerLinkActive="underline underline-offset-4"
