--- a/src/app/components/comment/comment.html
+++ b/src/app/components/comment/comment.html
@@ -3,7 +3,7 @@
 >
   <div class="mt-4">
     <p class="text-sm text-gray-500">
-      {{ comment.text }}
+      {{ comment.usersId }} says: {{ comment.text }}
     </p>
   </div>
 </article>
