--- a/src/app/about/about.html
+++ b/src/app/about/about.html
@@ -1,1 +1,12 @@
-<p>link works! you must be logged in!</p>
+<div class="space-y-16">
+  <p>link works! you must be logged in!</p>
+  <app-counter [value]="this.counter" />
+  {{ this.counter }}
+  <button (click)="onIncrement()">Increment</button>
+  <app-book
+    [book]="this.angularBook"
+    (deleteBook)="this.deleteBookEvent($event)"
+  />
+  {{ this.angularBook.title }}
+  {{ this.angularBook.synopsis }}
+</div>
