--- a/src/app/components/comment-form/comment-form.html
+++ b/src/app/components/comment-form/comment-form.html
@@ -1,5 +1,5 @@
 <form
-  class="flex flex-col items-end gap-4"
+  class="flex flex-col items-end gap-4 text-white"
   #commentForm="ngForm"
   (ngSubmit)="onSubmit(commentForm)"
 >
@@ -11,27 +11,21 @@
     (keyup)="updateField($event)"
     entry="entry"
     #entry="ngModel"
-    rows="3"
-    class="px-3 py-1.5 w-full border border-slate-900 rounded-md"
+    [rows]="smallReplyBox() ? '2' : '5'"
+    class="px-3 py-1.5 w-full border border-slate-900 rounded-md bg-gray-800"
   ></textarea>
   <div class="flex flex-row">
     <div
-      [hidden]="logged || !entry.value"
+      [hidden]="!logged || !entry.value"
       class="bg-red-400 p-0.5 text-white mr-4 rounded"
     >
-      Log in to comment
+      Log in to post
     </div>
     <button
       type="submit"
       class="inline-block rounded border border-current px-4 py-1 text-sm font-medium hover:border-white"
     >
-      {{ buttonText }}
-    </button>
-    <button
-      class="inline-block rounded border border-current px-4 py-1 text-sm font-medium hover:border-white"
-      (click)="toggleValue()"
-    >
-      globalSignal
+      Create
     </button>
   </div>
 </form>
