new folder for pages and resolvers

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -28,7 +28,7 @@
           >
             @if(computedNameSignal()) {
             <div>{{ computedNameSignal() + this.suffix }} profile</div>
-            } @else {login}
+            } @else {profile}
           </a>
 
           <a
