--- a/src/app/components/comment-form/comment-form.html
+++ b/src/app/components/comment-form/comment-form.html
@@ -22,7 +22,7 @@
     </div>
     <button
       type="submit"
-      class="inline-block rounded border border-current px-4 py-1 text-sm font-medium hover:border-white"
+      class="inline-block rounded border border-current px-4 py-1 text-sm font-medium hover:border-gray-800"
     >
       Create
     </button>
