--- a/src/app/components/comment/comment.html
+++ b/src/app/components/comment/comment.html
@@ -2,57 +2,65 @@
   [class]="comment().parentId ? 'w-96 ml-16 h-32 p-2' : 'p-4'"
   class="form-control rounded-xl border border-gray-700 bg-gray-800"
 >
-  <div class="flex items-center gap-4">
-    <img
-      alt=""
-      src="man.jpeg"
-      [class]="comment().parentId ? 'hidden' : ''"
-      class="size-16 rounded-full object-cover"
-    />
-
-    <div>
-      <h3
-        class="text-lg font-medium text-white"
+  <div>
+    <div class="flex items-center gap-4">
+      <img
+        alt=""
+        src="man.jpeg"
         [class]="comment().parentId ? 'hidden' : ''"
-      >
-        {{ comment().user?.name }}
-      </h3>
+        class="size-16 rounded-full object-cover"
+      />
+
+      <div>
+        <h3
+          class="text-lg font-medium text-white"
+          [class]="comment().parentId ? 'hidden' : ''"
+        >
+          {{ comment().user?.name }}
+        </h3>
+      </div>
     </div>
+
+    <ul class="mt-4 space-y-2">
+      <li>
+        <div
+          class="block h-full rounded-lg border border-gray-700 p-4 hover:border-white"
+        >
+          <strong class="font-medium text-white">{{ comment().text }}</strong>
+
+          <p class="mt-1 text-xs font-medium text-gray-300">
+            <span [class]="comment().parentId ? '' : 'hidden'"
+              >[{{ comment().user?.name }}] -
+            </span>
+            {{ comment().timestamp | date }}
+          </p>
+        </div>
+      </li>
+    </ul>
+    <button
+      [class]="
+        comment().parentId || this.isProfileComment()
+          ? 'hidden'
+          : 'inline-block'
+      "
+      class="rounded border border-current px-4 py-1 text-sm font-medium text-gray-400 hover:border-white"
+      (click)="clickReply()"
+    >
+      Reply
+    </button>
+    <button
+      [class]="this.isProfileComment() ? 'inline-block ' : 'hidden'"
+      class="rounded border border-current px-4 py- text-xs font-medium bg-red-400 text-gray-100 hover:border-red-400 hover:text-red-400"
+      (click)="clickDelete()"
+    >
+      Delete
+    </button>
   </div>
-
-  <ul class="mt-4 space-y-2">
-    <li>
-      <a
-        href="#"
-        class="block h-full rounded-lg border border-gray-700 p-4 hover:border-white"
-      >
-        <strong class="font-medium text-white">{{ comment().text }}</strong>
-
-        <p class="mt-1 text-xs font-medium text-gray-300">
-          <span [class]="comment().parentId ? '' : 'hidden'"
-            >[{{ comment().user?.name }}] -
-          </span>
-          {{ comment().timestamp | date }}
-        </p>
-      </a>
-    </li>
-  </ul>
-  <button
-    [class]="comment().parentId ? 'hidden' : 'inline-block'"
-    class="rounded border border-current px-4 py-1 text-sm font-medium text-gray-400 hover:border-white justify-end"
-    (click)="clickReply()"
-  >
-    Reply
-  </button>
 </article>
+
 @if(hasClickedReply) { @for(comment of nestedComments(); track $index) {
-<app-comment [comment]="comment"></app-comment> }
-<p>
-  @if(comment().id) {<app-reply-comment
-    [parentId]="comment().id"
-  ></app-reply-comment
-  >}
-</p>
-} @else {
+<app-comment [isProfileComment]="false" [comment]="comment"></app-comment> } }
+@if(comment().id && hasClickedReply) {
+<app-reply-comment [parentId]="comment().id"></app-reply-comment>} @else {
 <p></p>
 }
