--- a/src/app/components/comment-form/comment-form.html
+++ b/src/app/components/comment-form/comment-form.html
@@ -21,6 +21,7 @@
       Log in to post
     </div>
     <button
+      [disabled]="logged"
       type="submit"
       class="inline-block rounded border border-current px-4 py-1 text-sm font-medium hover:border-gray-800"
     >
