--- a/src/app/components/comment/comment.html
+++ b/src/app/components/comment/comment.html
@@ -51,7 +51,7 @@
     <button
       [class]="this.isProfileComment() ? 'inline-block ' : 'hidden'"
       class="rounded border border-current px-4 py- text-xs font-medium bg-red-400 text-gray-100 hover:border-red-400 hover:text-red-400"
-      (click)="clickDelete()"
+      (click)="clickDelete(comment().id)"
     >
       Delete
     </button>
