--- a/src/app/pages/profile/profile.html
+++ b/src/app/pages/profile/profile.html
@@ -1,5 +1,10 @@
-<section class="max-w-md mx-auto flex flex-col gap-4">
-  @for(comment of this.display(); track comment.timestamp) {<app-comment
+<section>
+  @if (this.display().length === 0) {
+  <div class="flex justify-center mt-8">
+    <p class="text-2xl text-white">No posts yet!</p>
+  </div>
+
+  } @for(comment of this.display(); track comment.timestamp) {<app-comment
     [isProfileComment]="true"
     [comment]="comment"
   ></app-comment>
