--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,11 +1,25 @@
-<header class="bg-white dark:bg-gray-900">
-  <div
-    class="mx-auto flex h-16 max-w-screen-xl items-center gap-8 px-4 sm:px-6 lg:px-8"
-  >
-    <a class="block text-teal-600 dark:text-teal-300" href="#">
+<section class="app-container">
+  <header class="nav-container">
+    <div>
+      <a routerLink="/login">
+        @if(computedNameSignal()) {
+        <span>{{ computedNameSignal() + this.suffix }} profile</span>
+
+        } @else {profile}
+      </a>
+      @if (computedNameSignal()) {
+      <button class="" (click)="logoutUser()">Logout</button>
+      }
+      <a routerLink="/home"> Home </a>
+    </div>
+  </header>
+
+  <router-outlet></router-outlet>
+</section>
+
+<!-- <a href="#">
       <span class="sr-only">Home</span>
       <svg
-        class="ml-8"
         version="1.1"
         baseProfile="full"
         width="100"
@@ -15,31 +29,4 @@
         <rect width="100%" height="100%" fill="rgb(17 24 39)" />
         <circle cx="25" cy="37" r="20" fill="currentColor" />
       </svg>
-    </a>
-
-    <div class="flex flex-1 items-center justify-end md:justify-between">
-      <nav aria-label="Global" class="hidden md:block"></nav>
-
-      <div class="flex items-center gap-4">
-        <div class="sm:flex sm:gap-4">
-          <a
-            class="block rounded-md bg-teal-600 px-5 py-2.5 text-sm font-medium text-white transition hover:bg-teal-700 dark:hover:bg-teal-500"
-            routerLink="/profile"
-          >
-            @if(computedNameSignal()) {
-            <div>{{ computedNameSignal() + this.suffix }} profile</div>
-            } @else {profile}
-          </a>
-
-          <a
-            class="hidden rounded-md bg-gray-100 px-5 py-2.5 text-sm font-medium text-teal-600 transition hover:text-teal-600/75 sm:block dark:bg-gray-800 dark:text-white dark:hover:text-white/75"
-            routerLink="/home"
-          >
-            Home
-          </a>
-        </div>
-      </div>
-    </div>
-  </div>
-</header>
-<div class="dark:bg-gray-900"><router-outlet></router-outlet></div>
+    </a> -->
