--- a/src/app/shared/components/comment-form/comment-form.html
+++ b/src/app/shared/components/comment-form/comment-form.html
@@ -1,4 +1,4 @@
-<form #commentForm="ngForm" (ngSubmit)="onSubmit(commentForm)">
+<form #commentForm="ngForm" (ngSubmit)="submitCommentToService(commentForm)">
   <section class="entry-area">
     <textarea
       name="entry"
