anothe messy meaningless commit'

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -8,7 +8,7 @@
         } @else {profile}
       </a>
       @if (computedNameSignal()) {
-      <button class="" (click)="logoutUser()">Logout</button>
+      <button class="logout-hover" (click)="logoutUser()">Logout</button>
       }
       <a routerLink="/home"> Home </a>
     </div>
