--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -8,7 +8,6 @@
 .nav-container {
   @extend %flex-row;
   @extend %secondary-background;
-  // background-color: $primary-color;
   justify-content: end;
 
   div {
@@ -23,4 +22,10 @@
     border-right: solid;
     padding-right: 2px;
   }
+}
+
+.logout-hover:hover {
+  @extend %alert-background;
+  border: 2px solid transparent;
+  color: white;
 }
