--- a/src/app/modules/home/home.html
+++ b/src/app/modules/home/home.html
@@ -4,10 +4,9 @@
   </section>
 
   <section class="comment-container">
-    <div #grb>
+    <div #commentContainer>
       @for (comments of (this.displayComments()); track $index) {
       <app-comment
-        #lrb
         [comment]="comments"
         [isProfileComment]="false"
       ></app-comment>
