--- a/src/app/modules/profile/profile.html
+++ b/src/app/modules/profile/profile.html
@@ -1,5 +1,5 @@
 <section>
-  <div class="deev">
+  <div class="comment-container">
     @for (comments of (this.displayComments()); track $index) {
     <div class="pad">
       <app-comment [comment]="comments" [isProfileComment]="true"></app-comment>
