--- a/src/app/modules/home/home.html
+++ b/src/app/modules/home/home.html
@@ -1,16 +1,18 @@
-<article class="home-container">
-  <section class="form-container">
-    <app-comment-form [smallReplyBox]="false"></app-comment-form>
-  </section>
+<div class="top">
+  <article class="home-container">
+    <section class="form-container">
+      <app-comment-form [smallReplyBox]="false"></app-comment-form>
+    </section>
 
-  <section class="comment-container">
-    <div #commentContainer>
-      @for (comments of (this.displayComments()); track $index) {
-      <app-comment
-        [comment]="comments"
-        [isProfileComment]="false"
-      ></app-comment>
-      }
-    </div>
-  </section>
-</article>
+    <section class="comment-container">
+      <div #commentContainer>
+        @for (comments of (this.displayComments()); track $index) {
+        <app-comment
+          [comment]="comments"
+          [isProfileComment]="false"
+        ></app-comment>
+        }
+      </div>
+    </section>
+  </article>
+</div>
