--- a/src/app/modules/home/home.scss
+++ b/src/app/modules/home/home.scss
@@ -21,8 +21,8 @@
   overflow-y: auto;
   margin-top: 2rem;
   // background-color: yellow;
-  width: 30rem;
-  translate: -24px 0;
+  width: 35rem;
+  translate: -30px 0;
   .inner-div {
     height: 100%;
     @extend %flex-row;
@@ -38,4 +38,12 @@
   justify-content: center;
   // background-color: green;
   width: 100%;
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+  .comment-container {
+    width: 35rem;
+    translate: -60px 0;
+  }
 }
