--- a/src/styles/_comment.scss
+++ b/src/styles/_comment.scss
@@ -5,11 +5,15 @@
 %comment_ {
   @include m.set-fadeIn-duration(m.$short-fade);
   margin-left: 10px;
-  width: 23rem;
+  width: 27rem;
   max-height: 7.5rem;
   box-shadow: 1px 2px 2px -2px;
   // box-shadow: 0 4px 6px -1px;
-
+  @media only screen and (max-width: 600px) {
+    %comment_ {
+      width: 23rem;
+    }
+  }
   img {
     height: 50px;
     width: 12;
