--- a/src/styles/_comment.scss
+++ b/src/styles/_comment.scss
@@ -33,11 +33,11 @@
   //   @extend %comment__button-basic-hover;
   // }
 }
-@media only screen and (max-width: 600px) {
-  %comment_ {
-    width: 23rem;
-  }
-}
+// @media only screen and (max-width: 600px) {
+//   %comment_ {
+//     width: 23rem;
+//   }
+// }
 %comment__dropdown_section {
   display: flex;
   flex-direction: column;
