--- a/src/app/shared/components/comment/comment.scss
+++ b/src/app/shared/components/comment/comment.scss
@@ -1,4 +1,5 @@
 @use "../../../../styles.scss" as *;
+$short-fade: 1s;
 
 .comment {
   @extend %comment_;
@@ -15,10 +16,29 @@ section {
 }
 @media only screen and (max-width: 600px) {
   .comment {
-    @include m.set-fadeIn-duration(m.$short-fade);
+    @include set-fadeIn-duration($short-fade);
     margin-left: 10px;
     max-height: 7.5rem;
     box-shadow: 1px 2px 2px -2px;
     width: 23rem;
+  }
+  img {
+    height: 50px;
+    width: 12;
+  }
+
+  ul {
+    list-style-type: none;
+  }
+  li {
+    display: flex;
+    flex-direction: row;
+    font-size: small;
+    justify-content: end;
+  }
+  button {
+    @extend %comment__button;
+
+    width: 100%;
   }
 }
