--- a/src/styles/_comment.scss
+++ b/src/styles/_comment.scss
@@ -26,6 +26,11 @@
   }
   button {
     @extend %comment__button;
+    // border-top: solid;
+    border-width: 0px;
+    width: 100%;
+    // border-color: black;
+    padding: 3px;
 
     width: 100%;
   }
