--- a/src/app/shared/components/comment2/comment2.scss
+++ b/src/app/shared/components/comment2/comment2.scss
@@ -1,4 +1,5 @@
 @use "../../../../styles.scss" as *;
+$short-fade: 1s;
 
 .comment {
   @extend %comment_;
@@ -12,4 +13,36 @@ section {
 }
 .basic-hover:hover {
   @extend %comment__button-basic-hover;
+}
+
+@media only screen and (max-width: 600px) {
+  .comment {
+    @include set-fadeIn-duration($short-fade);
+    margin-left: 10px;
+    width: 23rem;
+    max-height: 7.5rem;
+    box-shadow: 1px 2px 2px -2px;
+    // box-shadow: 0 4px 6px -1px;
+
+    img {
+      height: 50px;
+      width: 12;
+    }
+
+    ul {
+      list-style-type: none;
+    }
+    li {
+      display: flex;
+      flex-direction: row;
+      font-size: small;
+      justify-content: end;
+    }
+    button {
+      border-width: 0px;
+      width: 100%;
+      padding: 3px;
+      width: 100%;
+    }
+  }
 }
