--- a/src/app/shared/components/imperfect/imperfect.scss
+++ b/src/app/shared/components/imperfect/imperfect.scss
@@ -4,10 +4,16 @@
   flex-wrap: wrap;
   width: 80vw;
   text-align: right;
+  justify-content: space-around;
 }
 .little {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
   text-align: right;
+}
+@media only screen and (max-width: 600px) {
+  .big {
+    justify-content: end;
+  }
 }
