--- a/src/app/shared/components/noun/noun.scss
+++ b/src/app/shared/components/noun/noun.scss
@@ -10,3 +10,8 @@
   flex-direction: column;
   flex-wrap: wrap;
 }
+@media only screen and (max-width: 600px) {
+  .big {
+    justify-content: end;
+  }
+}
